ui_tests/use_items_res_2.stderr
error: failed to resolve `Foo`
  ┌─ main.box:1:5
  │
1 │ use Foo = Bar;
  │     ^^^

error: failed to resolve `Bar`
  ┌─ main.box:2:5
  │
2 │ use Bar = Baz;
  │     ^^^

error: failed to resolve `Baz`
  ┌─ main.box:3:5
  │
3 │ use Baz = Blah;
  │     ^^^

error: failed to resolve `Blah`
  ┌─ main.box:4:5
  │
4 │ use Blah = Foo;
  │     ^^^^

