ui_tests/use_items_res_2.box
use Foo = Bar;
use Bar = Baz;
use Baz = Blah;
use Blah = Foo;